--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
   <br><br>
 
+  <!-- update box -->
   <div id="modify" style="width: 300px;height: 200px;background: black;"></div>
 
     <script src="./app.js"></script>
